[gd_scene load_steps=4 format=3 uid="uid://c7okn5ros3fk6"]

[ext_resource type="Script" path="res://Weapon/attack.gd" id="1_hmbs4"]
[ext_resource type="Texture2D" uid="uid://02pe1ees1s2j" path="res://Weapon/Javelin/javelin0.png" id="2_q67vx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gj8kv"]
size = Vector2(4, 58)

[node name="Attack" type="Node2D"]
z_index = 1000
script = ExtResource("1_hmbs4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_q67vx")

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_gj8kv")

[node name="LifetimeTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
